--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  background-color: rgba(218, 176, 237, 0.15)
 }
 
 code {
