--- a/src/project/Users/Profile/index.css
+++ b/src/project/Users/Profile/index.css
@@ -1,24 +1,38 @@
-.profile-list-group{
-  border-radius: 0;
-  display: flex;
-  flex-direction: column;
 
-}
-.profile-list-group.list-group {
-  border-radius: 0;
-  display: flex;
-}
 
 .profile-list-group .list-group-item{
+  margin-top: 10px;
   border: none;
-  background-color: rgba(218, 176, 200, 0.6);
+  background-color: rgba(94, 23, 141, 0.5);
   color: #ffffff; 
   font-size: 0.8em;
   padding: 15px;
   text-align: center;
   height: 50px;
+  width: 150px;
 }
 
 .profile-btn-primary{
   background-color: rgb(187, 135, 221, 0.8); 
+}
+
+
+.profile-list-group.card-container {
+  max-width: 1300px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  margin-right: 10px;
+  gap: 10px;
+}
+
+.profile-list-group.card-size {
+  background-color: rgba(94, 23, 141, 0.5);
+  width: 150px;
+  height: 50px;
+  align-items: center;
+  text-decoration: none;
+  padding: 10px;
+  color: #ffffff; 
+  text-align: center;
 }
